--- a/css/styles.css
+++ b/css/styles.css
@@ -112,6 +112,14 @@ h1 {
 }
 
 @media (min-width: 375px) {
+  body {
+  font-size: 15px;
+  background-color: hsl(0, 0%, 95%);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  }
+  
   .parent-container {
     height: 90vh;
     display: flex;
